added larger block and terrain

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,7 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.run.all.processors=true
+ant.customtasks.libs=JWSAntTasks,jme3-android
 application.title=MyGame
 application.vendor=MyCompany
 assets.jar.name=assets.jar
@@ -27,14 +31,19 @@ dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.javaws.jar=/usr/lib/jvm/java-6-sun/jre/lib/javaws.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.jme3.classpath}:\
     ${libs.jme3-libraries.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
@@ -54,14 +63,25 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
-jnlp.codebase.type=local
+jnlp.codebase.type=user
+jnlp.codebase.user=
 jnlp.descriptor=application
 jnlp.enabled=false
-jnlp.offline-allowed=false
-jnlp.signed=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=true
+jnlp.signed=true
+jnlp.signing=generated
+jnlp.signing.alias=
+jnlp.signing.keystore=
+lwjgl.applet.height=480
+lwjgl.applet.width=640
 main.class=com.choochotrain.derpcraft.Main
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
+mkdist.disabled=false
+mobile.android.enabled=true
+mobile.android.package=com.choochotrain.derpcraft
+mobile.android.target=android-10
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
