--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,7 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.run.all.processors=true
-ant.customtasks.libs=JWSAntTasks,jme3-android
+ant.customtasks.libs=JWSAntTasks,launch4j
 application.title=MyGame
 application.vendor=MyCompany
 assets.jar.name=assets.jar
@@ -38,7 +38,8 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.jme3.classpath}:\
-    ${libs.jme3-libraries.classpath}
+    ${libs.jme3-libraries.classpath}:\
+    ${libs.jme3-test-data.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,13 +74,15 @@ jnlp.signed=true
 jnlp.signing=generated
 jnlp.signing.alias=
 jnlp.signing.keystore=
+launch4j.exe.enabled=true
+linux.launcher.enabled=true
 lwjgl.applet.height=480
 lwjgl.applet.width=640
+mac.app.enabled=true
 main.class=com.choochotrain.derpcraft.Main
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
 mkdist.disabled=false
-mobile.android.enabled=true
 mobile.android.package=com.choochotrain.derpcraft
 mobile.android.target=android-10
 platform.active=default_platform
