--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -79,7 +79,7 @@ linux.launcher.enabled=true
 lwjgl.applet.height=480
 lwjgl.applet.width=640
 mac.app.enabled=true
-main.class=com.choochotrain.derpcraft.Main
+main.class=com.choochootrain.derpcraft.Main
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
 mkdist.disabled=false
